Completed and combined horizontal/vertical flip, forward and backward.

--- a/css/style.scss
+++ b/css/style.scss
@@ -7,17 +7,14 @@ html {
     font-family: sans-serif;
     overflow-x: hidden;
 }
-
 h1 {
     text-align: center;
     margin: 0 auto;
 }
-
 .slider {
     margin: 1rem auto 2rem;
     text-align: center;
 }
-
 .slider-window {
     overflow: scroll;
     position: relative;
@@ -25,11 +22,9 @@ h1 {
     height: $slider-height;
     margin: 0;
 }
-
 .slider.slider-running .slider-window{
     overflow: visible;
 }
-
 .slider-img {
     display: block;
     width: $slider-width;
@@ -37,18 +32,14 @@ h1 {
     max-height: $slider-height;
     margin: 0;
 }
-
 .collated {
     position: absolute;
     top: 0;
     left: 0;
 }
-
-
-.slider-flip-vert, .slider-flip-horiz {
+.slider-flip {
     width: $slider-width;
 }
-
 @keyframes flip-vert-rotate {
     from {
         transform-origin: top;
@@ -69,32 +60,31 @@ h1 {
         transform: rotateY(0deg);
     }
 }
-
 @keyframes appear {
     from {
-        opacity: 0.4
-    }
-    75% {
-        opacity: 0.8
+        opacity: 0
     }
     to {
         opacity: 1
     }
 }
-
 .vertically-flipped {
     animation: flip-vert-rotate .6s ease-in forwards, appear .6s ease-out forwards;
 }
-
+.vertically-flipped-forward {
+    animation: flip-vert-rotate .6s ease-in forwards reverse, appear .6s ease-out forwards reverse;
+}
 .horizontally-flipped {
     animation: flip-horiz-rotate .6s ease-in forwards, appear .6s ease-out forwards;
-    
 }
-
-.btn-flip {
-    font-size: 2rem;
-    padding: 1rem 3rem;
+.horizontally-flipped-forward {
+    animation: flip-horiz-rotate .6s ease-in forwards reverse, appear .6s ease-out forwards reverse;
+}
+.slider button {
+    font-size: 1.5rem;
+    font-weight: bold;
+    padding: 1rem 2rem;
     margin: 1rem auto;
-    display: block;
+    display: inline-block;
     z-index: 10;
 }
