--- a/css/style.scss
+++ b/css/style.scss
@@ -2,7 +2,7 @@ $slider-width: 500px;
 $slider-height: 300px;
 $slider-half-height: 150px;
 $slider-half-width: 250px;
-
+$perspective: 1500px;
 html {
     font-family: sans-serif;
     overflow-x: hidden;
@@ -11,80 +11,161 @@ h1 {
     text-align: center;
     margin: 0 auto;
 }
+p {
+    text-indent: 3em;
+}
 .slider {
     margin: 1rem auto 2rem;
     text-align: center;
+    width: $slider-width;
+    max-width: 100%;
 }
 .slider-window {
-    overflow: scroll;
+    overflow-x: scroll;
+    overflow-y: hidden;
     position: relative;
-    width: $slider-width;
     height: $slider-height;
     margin: 0;
+    white-space: nowrap;
+}
+.slider-vertical .slider-window {
+    overflow-y: scroll;
+    overflow-x: hidden;    
 }
 .slider.slider-running .slider-window{
     overflow: visible;
+    width: $slider-width;
+    max-width: 100%;
+    perspective: $perspective;
 }
 .slider-img {
-    display: block;
+    display: inline-block;
     width: $slider-width;
+    max-width: 100%;
     min-height: 100%;
     max-height: $slider-height;
     margin: 0;
+    overflow: hidden;
+    background-color: #ccc;
+    position: relative;
+    img {
+        max-height: $slider-height;
+        max-width: $slider-width;
+        max-width: 100%;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+    }
+}
+.slider-vertical .slider-img {
+    display: block;
 }
 .collated {
     position: absolute;
     top: 0;
     left: 0;
 }
-.slider-flip {
-    width: $slider-width;
-}
+
 @keyframes flip-vert-rotate {
     from {
         transform-origin: top;
-        transform: rotateX(-270deg);
+        transform-style: preserve-3d;
+        transform: rotateX(270deg);
     }
     to {
         transform-origin: top;
+        transform-style: preserve-3d;
         transform: rotateX(0deg);
     }
 }
 @keyframes flip-horiz-rotate {
     from {
         transform-origin: left;
-        transform: rotateY(270deg)
+        transform-style: preserve-3d;
+        transform: rotateY(-270deg)
     }
     to {
         transform-origin: left;
+        transform-style: preserve-3d;
         transform: rotateY(0deg);
     }
 }
 @keyframes appear {
-    from {
-        opacity: 0
-    }
-    to {
-        opacity: 1
-    }
+    from { opacity: 0 }
+    to { opacity: 1 }
 }
 .vertically-flipped {
-    animation: flip-vert-rotate .6s ease-in forwards, appear .6s ease-out forwards;
+    animation: flip-vert-rotate .6s ease-in-out forwards, appear .6s ease-out forwards;
 }
 .vertically-flipped-forward {
     animation: flip-vert-rotate .6s ease-in forwards reverse, appear .6s ease-out forwards reverse;
 }
 .horizontally-flipped {
-    animation: flip-horiz-rotate .6s ease-in forwards, appear .6s ease-out forwards;
+    animation: flip-horiz-rotate .6s ease-in-out forwards, appear .6s ease-out forwards;
 }
 .horizontally-flipped-forward {
     animation: flip-horiz-rotate .6s ease-in forwards reverse, appear .6s ease-out forwards reverse;
 }
 .slider button {
-    font-size: 1.5rem;
+    display: none;
+}
+.slider.slider-running button {
+    font-size: 1.25rem;
     font-weight: bold;
-    padding: 1rem 2rem;
+    padding: 0.5rem 1rem;
     margin: 1rem auto;
-    display: inline-block;
     z-index: 10;
+    display: inline-block;    
+}
+
+@keyframes slide-horiz-out {
+    from { left: 0 }
+    to { left: -100% }
+}
+@keyframes slide-vert-out {
+    from { top: 0 }
+    to { top: -100% }
+}
+.horizontally-shuffled-out {
+    animation: appear .35s, slide-horiz-out .35s ease-in-out forwards reverse;
+}
+.horizontally-shuffled-in {
+    animation: slide-horiz-out .25s ease-in forwards, appear .25s ease-out forwards reverse;
+}
+.vertically-shuffled-out {
+    animation: appear .35s, slide-vert-out .35s ease-in-out forwards reverse;
+}
+.vertically-shuffled-in {
+    animation: slide-vert-out .25s ease-in forwards, appear .25s ease-out forwards reverse;
+}
+@keyframes fancy-slide-out {
+    from {
+        left: 0;
+        top: 0;
+        transform: rotate(0deg) scale(1) rotateY(0deg)
+    }
+    to {
+        left: -200%;
+        top: -100%;
+        transform: rotate(540deg) scale(0.4) rotateY(290deg)
+    }
+}
+@keyframes fancy-slide-in {
+    from {
+        left: -275%;
+        top: 0;
+        transform: rotateY(-1080deg) scale(0.3)
+    }
+    to {
+        left: 0;
+        top: 0;
+        transform: rotateY(0deg) scale(1)
+    }
+}
+.fancy-shuffled-out {
+    animation: fancy-slide-in .6s ease-in-out forwards, appear .6s;
+}
+.fancy-shuffled-in {
+    animation: fancy-slide-out .4s ease-in forwards, appear .4s ease-out forwards reverse;
 }
